CHANGES to BioNetGen
updated 20 April 2017
https://github.com/RuleWorld/bionetgen/

== BioNetGen-2.3.0 (stable release) ==
'''''date tbd'''''

=== Bug Fixes ===
* Fixed a bug in the <big><tt>BNGConsole</tt></big> to allow filenames with spaces in them.

== BioNetGen-2.3.0 (testing release) ==
'''''date tbd'''''

==== New Features ====
* Show graph automorphisms and statistical factor calculations for rules and reactions: BNG2.pl model.bngl --write_autos (or) BNG2.pl model.bngl --autos

==== SBML-to-BNGL Translator ====
* Atomizer will now query BioGrid and PathWay commons when determining the active or binding site in a complex. Include the 'pathwaycommons' flag during model import to active this option
* Several bugfixes to the lexical analysis engine
* The SBML-to-BNGL translator was moved to its own repository@https://github.com/RuleWorld/atomizer. The Atomizer source code can also be found in the XXX directory within the BioNetGen distribution

==== Visualization ====
* New styles for visualization.
* Updates to visualization algorithms.
* Supported types: conventional, compact, regulatory, opts, contactmap, reaction_network.
* Supported regulatory graph options: background, opts, groups, collapse, ruleNames, doNotUseContextWhenGrouping, doNotCollapseEdges.

==== Minor changes ===
* BioNetGen will now automatically run the generate_network command if one of simulate_pla/simulate_ode/simulate_ssa methods are called and a network wasn't loaded into the system otherwise
* Dangling bonds graph specifications of the kind A(b!1) are no longer allowed.
* Added support for the <big><tt>atomize</tt></big> and <big><tt>blocks</tt></big> arguments of the <big><tt>readFile</tt></big> action to the BNGConsole <big><tt>load</tt></big> command, e.g., <big><tt>load path_to_model/sbml_model.xml --atomize 1</tt></big>

==== Bug Fixes ====